Adição da página de vínculos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </a>
         <nav>
             <a href="" class="active">Página principal</a>
-            <a href="/pages/vinculos.html">Vínculos</a>
+            <a href="/pages/connections.html">Vínculos</a>
             <a href="/pages/portifolio.html">Portifólio</a>
         </nav>
     </header>
