--- a/pages/portifolio.html
+++ b/pages/portifolio.html
@@ -22,7 +22,7 @@
         </a>
         <nav>
             <a href="/index.html">Página principal</a>
-            <a href="/pages/vinculos.html">Vínculos</a>
+            <a href="/pages/connections.html">Vínculos</a>
             <a href="" class="active">Portifólio</a>
         </nav>
     </header>
