--- a/pages/connections.html
+++ b/pages/connections.html
@@ -7,10 +7,13 @@
     <link rel="shortcut icon" href="/images/icone.png" type="image/x-icon">
 
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/connections.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+
+    <script src="/js/loadConnections.js"></script>
 </head>
 <body>
     <header>
@@ -24,7 +27,10 @@
         </nav>
     </header>
     <main>
-        
+        <div class="connections"></div>
     </main>
 </body>
+<script>
+    loadConnections();
+</script>
 </html>
