--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 
 <body>
     <header>
-        <a href="">
-            <h1>JeanC4rlo</h1>
-        </a>
+        <div class="mobile">
+            <a href="">
+                <h1>JeanC4rlo</h1>
+            </a>
+            <img src="/images/arrow_right.svg" class="menu">
+        </div>
         <nav>
             <a href="" class="active">Página principal</a>
             <a href="/pages/connections.html">Vínculos</a>
@@ -75,4 +78,7 @@
         </div>
     </main>
 </body>
+
+<script src="/js/useHeader.js"></script>
+
 </html>
