Adição de target _blank

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
             </div>
             <hr>
             <div class="social">
-                <a class="social-item" href="https://github.com/JeanC4rlo">
+                <a class="social-item" target="_blank" href="https://github.com/JeanC4rlo">
                     <div class="image-wrapper">
                         <img src="/images/github.png" alt="">
                     </div>
                     <p>JeanC4rlo</p>
                 </a>
-                <a class="social-item" href="https://instagram.com/jeanc4rlo.dev">
+                <a class="social-item" target="_blank" href="https://instagram.com/jeanc4rlo.dev">
                     <div class="image-wrapper">
                         <img src="/images/instagram.png" alt="">
                     </div>
